--- a/Application/Admin/View/default/WxshopProduct/index.html
+++ b/Application/Admin/View/default/WxshopProduct/index.html
@@ -78,7 +78,7 @@
 								<td>
 									<a href="{:U('Admin/WxshopProduct/group',array('id'=>$vo['id'],'storeid'=>$storeid))}" class="btn btn-sm btn-link">商品分组</a>
 									
-									<a href="{:U('Admin/WxshopProduct/express',array('id'=>$vo['id'],'storeid'=>$storeid,'productid'=>$vo['product_id']))}" class="btn btn-sm btn-link">运费</a>
+									<!--<a href="{:U('Admin/WxshopProduct/express',array('id'=>$vo['id'],'storeid'=>$storeid,'productid'=>$vo['product_id']))}" class="btn btn-sm btn-link">运费</a>-->
 									<a href="{:U('Admin/WxshopProduct/detail',array('id'=>$vo['id'],'storeid'=>$storeid,'productid'=>$vo['product_id']))}" class="btn btn-sm btn-link">商品详情</a>
 									<a href="{:U('Admin/WxshopProduct/sku',array('id'=>$vo['id']))}" class="btn btn-sm btn-link">商品规格<i title="规格一般指 颜色、款式等" class="fa fa-question" data-toggle="tooltip"></i></a></td>
 								<td>
