--- a/Application/Admin/View/default/Store/add.html
+++ b/Application/Admin/View/default/Store/add.html
@@ -143,6 +143,15 @@
 							<div class="help-block">(请上传店铺Banner,建议尺寸：640像素 * 300像素,150KB以下)</div>
 						</div>
 					</div>
+
+
+					<div class="form-group">
+						<label for="free_shipping" class="col-md-2 col-lg-2 control-label">商品免邮设定</label>
+						<div class="col-md-10 col-lg-10">
+							<input type="text" class="required form-control input-short" value="{$store.free_shipping}" name="free_shipping" id="free_shipping" placeholder="请输入免邮下限">
+							<div class="help-block" >(即：满多少元可以免邮,<b style="color: red">如果不想免邮,请把价格设置高一点!!!</b>)</div>
+						</div>
+					</div>
 					
 					<div class="form-group baidumap_position">
 						<label for="inputtitle" class="col-md-2 col-lg-2 control-label">店铺经纬度</label>
