--- a/Application/Shop/View/style1/Pay/pay.html
+++ b/Application/Shop/View/style1/Pay/pay.html
@@ -38,7 +38,7 @@
 	  			font-size: 14px;
 	  		}
 
-			.div_payType{border:1px solid #ccc;padding:1rem;margin-top:0.2rem}
+			.div_payType{border:1px solid #ccc;padding:1rem;margin-top:10px;}
 		</style>
 
 	</head>
@@ -55,7 +55,8 @@
 				<div class="am-text-center" >
 				订单总价:<span class="am-text-danger">¥
 					<span class="js_total_price" >{:number_format($total_fee/100.0,2)}元&nbsp;
-						<if condition="$total_express gt 0">含运费：{:number_format($total_express/100,2)}元</if></span></span>
+
+						<if condition="$total_express gt 0"><br /><span style="color: black;font-size: 12px">含运费：{:number_format($total_express/100,2)}元</span></if></span></span>
 				</div>
 				<form id="form_payType" class="am-text-left am-form">
 				    <div class="div_payType" >
@@ -77,7 +78,7 @@
 					</ul>-->
 				</form>
 				<div class="footer-menu am-text-right " style="margin-top:0.2rem">
-					<a href="javascript:void(0)" onclick="choose();"  class="am-btn am-btn-sm  am-block am-btn-danger">确定</a>
+					<a href="javascript:void(0)" onclick="choose();"  class="am-btn am-btn-sm  am-block am-btn-success" style="padding: 10px;margin-top: 20px;border-radius: 5px;">确定</a>
 				</div>
 		</div>
 		<script type="text/javascript" src="__CDN__/jquery/2.1.1/jquery.min.js"></script>
