--- a/Application/Admin/View/default/Orders/returnGoods.html
+++ b/Application/Admin/View/default/Orders/returnGoods.html
@@ -15,6 +15,7 @@
 
 			<form class="form form-horizontal validateForm returnForm">
 				<input type="hidden" value="{$id}" name="id" />
+				<input type="hidden" value="{$thid}" name="thid" />
 				<fieldset>
 					<legend>退货备注信息填写
 						<div class="form-group">
